Fix SVG overflow in IE9.

--- a/ex/voronoi.css
+++ b/ex/voronoi.css
@@ -1,5 +1,6 @@
 svg {
   border: solid 1px #666;
+  overflow: hidden;
 }
 
 path {
